// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Styles should render the giga size 1`] = `
.circuit-0 {
  width: 48px;
  height: 48px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(48px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 2H5a3 3 0 0 0-3 3v13.63l5.23-6.27a.971.971 0 0 1 .72-.36.987.987 0 0 1 .75.29l2.14 2.14 3.32-4.98a1.04 1.04 0 0 1 1.67 0L22 18.71V5a3 3 0 0 0-3-3zM9 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm6 1.8-3.17 4.75a.99.99 0 0 1-1.54.161L8.06 14.48 2.7 20.92A2.962 2.962 0 0 0 5 22h14a2.966 2.966 0 0 0 2.17-.94L15 11.8z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render the identity variant placeholder 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M22.981 21.22A11.074 11.074 0 0 0 12 12a11.074 11.074 0 0 0-10.981 9.22A1.576 1.576 0 0 0 2.6 23h18.8a1.576 1.576 0 0 0 1.581-1.78zM12 19.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm4.5-14a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render the identity variant with an image 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 100%;
  display: block;
  object-fit: cover;
  object-position: center;
}

<div>
  <img
    alt=""
    class="circuit-0"
    src="/images/illustration-cat.jpg"
  />
</div>
`;

exports[`Avatar Styles should render the identity variant with initials 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    JD
  </div>
</div>
`;

exports[`Avatar Styles should render the object variant placeholder 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 2H5a3 3 0 0 0-3 3v13.63l5.23-6.27a.971.971 0 0 1 .72-.36.987.987 0 0 1 .75.29l2.14 2.14 3.32-4.98a1.04 1.04 0 0 1 1.67 0L22 18.71V5a3 3 0 0 0-3-3zM9 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm6 1.8-3.17 4.75a.99.99 0 0 1-1.54.161L8.06 14.48 2.7 20.92A2.962 2.962 0 0 0 5 22h14a2.966 2.966 0 0 0 2.17-.94L15 11.8z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render the object variant with an image 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: block;
  object-fit: cover;
  object-position: center;
}

<div>
  <img
    alt=""
    class="circuit-0"
    src="/images/illustration-coffee.jpg"
  />
</div>
`;

exports[`Avatar Styles should render the yotta size 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 2H5a3 3 0 0 0-3 3v13.63l5.23-6.27a.971.971 0 0 1 .72-.36.987.987 0 0 1 .75.29l2.14 2.14 3.32-4.98a1.04 1.04 0 0 1 1.67 0L22 18.71V5a3 3 0 0 0-3-3zM9 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm6 1.8-3.17 4.75a.99.99 0 0 1-1.54.161L8.06 14.48 2.7 20.92A2.962 2.962 0 0 0 5 22h14a2.966 2.966 0 0 0 2.17-.94L15 11.8z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar Styles should render with default styles 1`] = `
.circuit-0 {
  width: 96px;
  height: 96px;
  box-shadow: 0 0 0 1px var(--cui-border-subtle);
  background-color: var(--cui-bg-subtle);
  border-radius: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: var(--cui-fg-placeholder);
  font-size: calc(96px / 2);
  font-weight: 700;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<div>
  <div
    aria-hidden="true"
    class="circuit-0"
  >
    <svg
      fill="none"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 2H5a3 3 0 0 0-3 3v13.63l5.23-6.27a.971.971 0 0 1 .72-.36.987.987 0 0 1 .75.29l2.14 2.14 3.32-4.98a1.04 1.04 0 0 1 1.67 0L22 18.71V5a3 3 0 0 0-3-3zM9 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm6 1.8-3.17 4.75a.99.99 0 0 1-1.54.161L8.06 14.48 2.7 20.92A2.962 2.962 0 0 0 5 22h14a2.966 2.966 0 0 0 2.17-.94L15 11.8z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
